--- a/netlify.toml
+++ b/netlify.toml
@@ -1,7 +1,7 @@
 # netlify.toml
 [build]
   functions = "netlify/functions"
-  publish = "public"
+  publish = "build"
 
 [[redirects]]
   from = "/*"
